# galp

./: .gitignore  .gitmodules  README.md  client.py  eventnamespace.py  graph.py  pyproject.toml  requirements.txt  serializer.py  service  setup.cfg  start  store.py  typing.py  worker.py
.github/workflows/: test.yml
benchmarks/: logfest.py  pyinstrument2flamegraph.py  speed.py
config/: worker.toml
galp/: __init__.py  _broker.py  _client.py  _pool.py  _worker.py  asyn.py  async_utils.py  broker.py  cache.py  cli.py  client.py  command_queue.py  commands.py  config.py  context.py  control_queue.py  default_resources.py  eventnamespace.py  forward_protocol.py  graph.py  local_system_utils.py  logserver.py  lower_protocol.py  lower_sessions.py  messages.py  net_store.py  pack.py  pool.py  printer.py  profiler.py  protocol.py  pyarrow.py  query.py  reply_protocol.py  req_rep.py  resolver.py  result.py  script.py  serialize.py  serializer.py  (+13 more)
galp/broker/: __init__.py  __main__.py  broker.py
galp/client/: __init__.py  __main__.py
galp/dashboard/: __init__.py  __main__.py
galp/dashboard/templates/: base.html  landing.html  step.html
galp/net/base/: dump.py  load.py  types.py
galp/net/core/: dump.py  load.py  types.py
galp/net/requests/: dump.py  load.py  types.py
galp/net/routing/: dump.py  load.py  types.py
galp/pool/: __init__.py  __main__.py  pool.py
galp/tests/: config.toml  conftest.py  fixtures_clients.py  fixtures_processes.py  steps.py  test_00_protocols.py  test_10_workers.py  test_11_brokers.py  test_12_clients.py  test_15_standalone.py  test_20_galp.py  test_20_inject.py  test_20_structured.py  test_21_failures.py  test_22_cli.py  test_30_dashboard.py  test_31_queries.py  test_a_protocols.py  test_a_script.py  test_b_brokers.py  test_b_clients.py  test_b_workers.py  test_c_galp.py  test_galp.py  with_timeout.py
galp/tests/steps/: __init__.py  dashboard.py  files.py  inject.py  query.py  utils.py
galp/wdl/: __init__.py  handlers.py
galp/worker/: __init__.py  __main__.py  worker.py
gtop/: steps.py
gtop/parsing/: autocompile.py  llvm.py  vcf.py
requirements/: dev.txt  runtime.txt  slave.txt
scripts/: dask  dask_scheduler.sh  dask_tunnel  get_mirrors.sh  jupyter  lsyncd  worker
tests/: config.toml  conftest.py  fixtures_clients.py  fixtures_processes.py  fixtures_sockets.py  steps.py  test_10_workers.py  test_12_clients.py  test_15_standalone.py  test_20_galp.py  test_20_inject.py  test_20_structured.py  test_21_failures.py  test_22_cli.py  test_30_dashboard.py  test_31_queries.py  test_galp.py  test_pipeline.py  test_wdl.py  vcf_calls_filter.py
tests/config/: worker.toml
tests/steps/: __init__.py  dashboard.py  files.py  inject.py  query.py  utils.py
tests/unit/: test_asyn.py  test_commands.py  test_pack.py  test_socket_transport.py  test_store.py  test_task_defs.py  test_task_types.py  unimportable.py
tests/wdl/: downstream.wdl  hello.wdl  upstream.wdl
wdl_galp/: __init__.py  handlers.py
