[project]
name = "galp"
version = "0.0.1"
description = "Incremental distributed python runner"
authors = [{name = "Étienne Morice", email = "etienne.morice@mpinat.mpg.de"}]
readme = "README.md"
# Uses: |-style unions, match, type aliases ; released 2021
requires-python = ">= 3.10"
dependencies = [
    "psutil",
    "pyzmq",
    "diskcache",
    "msgpack",
    "dill",
    "flask",
    "threadpoolctl",
    "tqdm",
    "typing_extensions",
    "aiohttp",
]

[project.optional-dependencies]
dev = [
    "tox",
    "pytest",
    "pytest-asyncio",
    "async-timeout",
    "psutil",
    "numpy",
    "pyarrow",
    "plotly",
    "beautifulsoup4",
    "mypy",
    "pyinstrument-flamegraph @ git+https://github.com/emorice/pyinstrument-flamegraph",
    "aiohttp",
    "miniwdl",
]
wdl = [
    "miniwdl",
    ]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.tox]
legacy_tox_ini = """
[tox]
env_list = py310,py311,py312,py313

[testenv]
extras = dev
commands = pytest {posargs}

[gh-actions]
python =
    3.10: py310
    3.11: py311
    3.12: py312
"""

[tool.pylint.STRING]
check-str-concat-over-line-jumps = "yes"
