[metadata]
name = galp
version = 0.0.1

[options]
packages =
    galp
    galp.client
    galp.broker
    galp.worker
    galp.pool
    galp.dashboard
install_requires =
    psutil
    pyzmq
    diskcache
    msgpack
    dill
    toml
    flask
    pydantic

[options.package_data]
galp.dashboard =
    templates/*.html

[mypy]
plugins = pydantic.mypy
