[metadata]
name = galp
version = 0.0.1

[options]
packages =
    galp
    galp.net
    galp.net.base
    galp.net.routing
    galp.net.core
    galp.net.requests
    galp.client
    galp.broker
    galp.worker
    galp.pool
    galp.dashboard
install_requires =
    psutil
    pyzmq
    diskcache
    msgpack
    dill
    toml
    flask
    pydantic
    threadpoolctl

[options.package_data]
galp.dashboard =
    templates/*.html

[mypy]
plugins = pydantic.mypy
