[metadata]
name = galp
version = 0.0.1

[options]
packages =
    galp
    galp.net
    galp.net.base
    galp.net.routing
    galp.net.core
    galp.net.requests
    galp.client
    galp.pool
    galp.dashboard
install_requires =
    psutil
    pyzmq
    diskcache
    msgpack
    dill
    flask
    threadpoolctl
    tqdm

[options.package_data]
galp.dashboard =
    templates/*.html

[mypy]
plugins = pydantic.mypy
